JPA 数据库创建 CRUD 分页-->下一期mybatis

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
 			<!-- 这个需要为 true 热部署才有效 -->
 			<optional>true</optional>
 		</dependency>
+		<!-- mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.21</version>
+		</dependency>
+		<!-- jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 	<!-- JDK版本 -->
 	<properties>
