--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,16 @@ spring:
   view:
    prefix: /WEB-INF/jsp/
    suffix: .jsp
+ datasource:
+  url: jdbc:mysql://127.0.0.1:3306/springboot?characterEncoding=UTF-8
+  username: root
+  password: 
+  driver-class-name: com.mysql.jdbc.Driver
+ jpa:
+  properties:
+   hibernate:
+    hbm2ddl:
+     auto: update
 server:
  port: 8888
  context-path: /test
