--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
 server:
  port: 8888
  context-path: /test
+mybatis:
+ mapper-locations: classpath:com/ms/springboot/mapper/*.xml
+ type-aliases-package: com.ms.springboot.pojo
