--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 	</parent>
 	<!-- 依赖 -->
 	<dependencies>
+		<!-- SQLite依赖本地数据库 -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<!-- web应用 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,23 +63,16 @@
 			<!-- 这个需要为 true 热部署才有效 -->
 			<optional>true</optional>
 		</dependency>
-		<!-- mybatis -->
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.1.1</version>
-		</dependency>
 		<!-- mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.21</version>
 		</dependency>
-		<!-- pagehelper -->
+		<!-- jpa -->
 		<dependency>
-			<groupId>com.github.pagehelper</groupId>
-			<artifactId>pagehelper</artifactId>
-			<version>4.1.6</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 	<!-- JDK版本 -->
