--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ spring:
   view:
    prefix: /WEB-INF/jsp/
    suffix: .jsp
+ jpa:
+  database-platform: com.ms.sqlite.SQLiteDialect
+  generate-ddl: true
+  hibernate: 
+   ddl-auto: update
  datasource:
-  url: jdbc:mysql://127.0.0.1:3306/springboot?characterEncoding=UTF-8
-  username: root
-  password: 
-  driver-class-name: com.mysql.jdbc.Driver
+  url: jdbc:sqlite:ms.db
+  driver-class-name: org.sqlite.JDBC
 server:
  port: 8888
  context-path: /test
-mybatis:
- mapper-locations: classpath:com/ms/springboot/mapper/*.xml
- type-aliases-package: com.ms.springboot.pojo
